--- a/index.html
+++ b/index.html
@@ -5,17 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Duaa, Do You Love Me?</title>
     <style>
+        @keyframes vibrate {
+            0% { transform: translate(0, 0); }
+            25% { transform: translate(-2px, 2px); }
+            50% { transform: translate(2px, -2px); }
+            75% { transform: translate(-2px, -2px); }
+            100% { transform: translate(2px, 2px); }
+        }
         body {
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #ffe4f2; /* Softer pink for a more girly feel */
+            background-color: #ffe4f2;
             font-family: 'Pacifico', cursive;
             text-align: center;
             margin: 0;
             overflow: hidden;
+            position: relative;
         }
         h1 {
             color: #ff4081;
@@ -38,21 +46,44 @@
             border-radius: 15px;
             cursor: pointer;
             transition: all 0.3s ease-in-out;
+            position: relative;
         }
         #yes {
             background-color: #ff80ab;
             color: white;
             box-shadow: 0px 4px 10px rgba(255, 128, 171, 0.6);
+            position: relative;
         }
         #yes:hover {
             background-color: #ff4081;
             transform: scale(1.1);
+            animation: vibrate 0.2s infinite;
         }
         #no {
             background-color: #ff5252;
             color: white;
             position: absolute;
             box-shadow: 0px 4px 10px rgba(255, 82, 82, 0.6);
+        }
+        .particle {
+            position: absolute;
+            width: 8px;
+            height: 8px;
+            background-color: #ff4081;
+            border-radius: 50%;
+            opacity: 0.7;
+            pointer-events: none;
+            animation: floatUp 1s linear infinite;
+        }
+        @keyframes floatUp {
+            from {
+                transform: translateY(0);
+                opacity: 1;
+            }
+            to {
+                transform: translateY(-50px);
+                opacity: 0;
+            }
         }
     </style>
 </head>
@@ -61,7 +92,7 @@
         <img src="https://i.pinimg.com/originals/25/7c/cb/257ccbf5ccf0b5acf684252638c624d5.gif" alt="Cute Love GIF">
     </div>
     <h1>Duaa, do you love me? 💕</h1>
-    <button id="yes" onclick="yesAnswer()">Yes</button>
+    <button id="yes" onclick="yesAnswer()" onmouseover="createParticles(event)">Yes</button>
     <button id="no" onmouseover="moveNoButton()">No</button>
     <script>
         function yesAnswer() {
@@ -73,6 +104,22 @@
             let y = Math.random() * (window.innerHeight - 50);
             button.style.left = x + 'px';
             button.style.top = y + 'px';
+        }
+        function createParticles(event) {
+            for (let i = 0; i < 10; i++) {
+                let particle = document.createElement('div');
+                particle.classList.add('particle');
+                document.body.appendChild(particle);
+                
+                let x = event.clientX + (Math.random() * 30 - 15);
+                let y = event.clientY + (Math.random() * 30 - 15);
+                particle.style.left = `${x}px`;
+                particle.style.top = `${y}px`;
+                
+                setTimeout(() => {
+                    particle.remove();
+                }, 1000);
+            }
         }
     </script>
 </body>
