--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
             box-shadow: 0px 4px 10px rgba(255, 82, 82, 0.6);
         }
         
-        /* Styles for red dot particles */
+        /* Styles for heart particles */
         .particle {
             position: absolute;
-            width: 10px;
-            height: 10px;
-            background-color: red;
-            border-radius: 50%;
+            width: 30px;
+            height: 30px;
+            background-image: url('https://i.pinimg.com/736x/e4/24/d3/e424d3d4c640e34d7be7aa63be264191.jpg');
+            background-size: cover;
             opacity: 0.8;
             pointer-events: none;
             animation: floatUp 2s linear;
