--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             position: absolute;
             width: 30px;
             height: 30px;
-            background-image: url('https://i.pinimg.com/736x/e4/24/d3/e424d3d4c640e34d7be7aa63be264191.jpg');
+            background-image: url('https://i.pinimg.com/originals/d6/fc/4f/d6fc4f12b429da139aaac84525334ad5.gif');
             background-size: cover;
             opacity: 0.8;
             pointer-events: none;
